--- a/MHWhiteboardDemo/Base.lproj/Main.storyboard
+++ b/MHWhiteboardDemo/Base.lproj/Main.storyboard
@@ -21,6 +21,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mdN-gJ-d1f" customClass="MHWhiteboardView">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="591"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Ghm-Ak-EdV">
                                 <rect key="frame" x="8" y="599" width="359" height="30"/>
                                 <subviews>
@@ -40,14 +44,14 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAd-TR-seY">
                                         <rect key="frame" x="179.5" y="0.0" width="90" height="30"/>
-                                        <state key="normal" title="fgImage"/>
+                                        <state key="normal" title="fgImg"/>
                                         <connections>
                                             <action selector="onSelectForegroundImageTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="loK-hW-1oU"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ST-8m-egk">
                                         <rect key="frame" x="269.5" y="0.0" width="89.5" height="30"/>
-                                        <state key="normal" title="bgImage"/>
+                                        <state key="normal" title="bgImg"/>
                                         <connections>
                                             <action selector="onSelectBackgroundImageTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K73-YW-EdV"/>
                                         </connections>
@@ -165,43 +169,65 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1v6-oP-t73">
-                                <rect key="frame" x="8" y="629" width="359" height="30"/>
+                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pt3-OP-BdV">
+                                <rect key="frame" x="8" y="599" width="359" height="30"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VOk-jN-cd0">
-                                        <rect key="frame" x="0.0" y="0.0" width="90" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fcq-wF-U21">
+                                        <rect key="frame" x="0.0" y="0.0" width="72" height="30"/>
                                         <state key="normal" title="eraser"/>
                                         <connections>
-                                            <action selector="onEraserTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mPr-vK-bbH"/>
+                                            <action selector="onEraserTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eSh-HX-HyB"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cDa-T9-y2c">
-                                        <rect key="frame" x="90" y="0.0" width="89.5" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vRy-AI-0gK">
+                                        <rect key="frame" x="72" y="0.0" width="71.5" height="30"/>
                                         <state key="normal" title="undo"/>
                                         <connections>
-                                            <action selector="onUndoTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RUn-3L-TLf"/>
+                                            <action selector="onUndoTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="upP-w4-MOc"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pUl-v8-m1T">
-                                        <rect key="frame" x="179.5" y="0.0" width="90" height="30"/>
-                                        <state key="normal" title="clear"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jHw-AM-zcZ">
+                                        <rect key="frame" x="143.5" y="0.0" width="72" height="30"/>
+                                        <state key="normal" title="repeat"/>
                                         <connections>
-                                            <action selector="onClearTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="alc-uG-Q0X"/>
+                                            <action selector="onRepeatTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z9u-EM-pz3"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Qw-Wp-Ezv" userLabel="clearBG">
-                                        <rect key="frame" x="269.5" y="0.0" width="89.5" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r8n-wP-goX">
+                                        <rect key="frame" x="215.5" y="0.0" width="71.5" height="30"/>
+                                        <state key="normal" title="clearAll"/>
+                                        <connections>
+                                            <action selector="onClearTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ryN-ty-p7m"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GLd-GF-VjV" userLabel="clearBG">
+                                        <rect key="frame" x="287" y="0.0" width="72" height="30"/>
                                         <state key="normal" title="clearBgImg"/>
                                         <connections>
-                                            <action selector="onClearBackgroundImageTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ka1-K1-TYK"/>
+                                            <action selector="onClearBackgroundImageTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ey3-8n-w5R"/>
                                         </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mdN-gJ-d1f" customClass="MHWhiteboardView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="591"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1v6-oP-t73">
+                                <rect key="frame" x="8" y="629" width="359" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VOk-jN-cd0">
+                                        <rect key="frame" x="0.0" y="0.0" width="179.5" height="30"/>
+                                        <state key="normal" title="tools"/>
+                                        <connections>
+                                            <action selector="onToolsViewTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gVO-dj-OSe"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pUl-v8-m1T">
+                                        <rect key="frame" x="179.5" y="0.0" width="179.5" height="30"/>
+                                        <state key="normal" title="clear"/>
+                                        <connections>
+                                            <action selector="onToolsViewTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mgL-xz-S77"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -209,24 +235,28 @@
                             <constraint firstItem="mdN-gJ-d1f" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1fl-ly-xzm"/>
                             <constraint firstItem="jSU-ag-sQm" firstAttribute="trailing" secondItem="Ghm-Ak-EdV" secondAttribute="trailing" id="1kc-8q-nln"/>
                             <constraint firstItem="lP0-y6-SPy" firstAttribute="bottom" secondItem="jSU-ag-sQm" secondAttribute="bottom" id="33a-YG-IHV"/>
+                            <constraint firstItem="pt3-OP-BdV" firstAttribute="top" secondItem="lP0-y6-SPy" secondAttribute="top" id="4y9-0e-Kbk"/>
                             <constraint firstItem="lP0-y6-SPy" firstAttribute="trailing" secondItem="jSU-ag-sQm" secondAttribute="trailing" id="CmB-g4-v05"/>
                             <constraint firstItem="lP0-y6-SPy" firstAttribute="leading" secondItem="jSU-ag-sQm" secondAttribute="leading" id="D0Y-qk-bZT"/>
                             <constraint firstItem="jSU-ag-sQm" firstAttribute="bottom" secondItem="Ghm-Ak-EdV" secondAttribute="bottom" id="EDs-rf-iOb"/>
                             <constraint firstItem="7Eb-a5-5XD" firstAttribute="top" secondItem="1v6-oP-t73" secondAttribute="bottom" constant="8" id="HcA-js-iey"/>
+                            <constraint firstItem="pt3-OP-BdV" firstAttribute="bottom" secondItem="lP0-y6-SPy" secondAttribute="bottom" id="LRr-DQ-mwF"/>
                             <constraint firstItem="mdN-gJ-d1f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="OsM-G8-e5a"/>
                             <constraint firstItem="Ghm-Ak-EdV" firstAttribute="leading" secondItem="1v6-oP-t73" secondAttribute="leading" id="QJy-yc-6sH"/>
                             <constraint firstItem="jSU-ag-sQm" firstAttribute="top" secondItem="Ghm-Ak-EdV" secondAttribute="top" id="XNv-CL-bnG"/>
                             <constraint firstAttribute="trailing" secondItem="mdN-gJ-d1f" secondAttribute="trailing" id="dvT-7W-RxM"/>
                             <constraint firstItem="Ghm-Ak-EdV" firstAttribute="trailing" secondItem="1v6-oP-t73" secondAttribute="trailing" id="id4-Ze-dIU"/>
+                            <constraint firstItem="pt3-OP-BdV" firstAttribute="leading" secondItem="lP0-y6-SPy" secondAttribute="leading" id="kFj-sn-MjO"/>
                             <constraint firstItem="lP0-y6-SPy" firstAttribute="top" secondItem="jSU-ag-sQm" secondAttribute="top" id="r5Y-3M-MBK"/>
                             <constraint firstItem="1v6-oP-t73" firstAttribute="top" secondItem="Ghm-Ak-EdV" secondAttribute="bottom" id="rOa-6r-p1I"/>
+                            <constraint firstItem="pt3-OP-BdV" firstAttribute="trailing" secondItem="lP0-y6-SPy" secondAttribute="trailing" id="uaD-ZC-Txk"/>
                             <constraint firstAttribute="trailing" secondItem="1v6-oP-t73" secondAttribute="trailing" constant="8" id="v13-JK-CK4"/>
                             <constraint firstItem="Ghm-Ak-EdV" firstAttribute="top" secondItem="mdN-gJ-d1f" secondAttribute="bottom" constant="8" id="yc0-wH-guY"/>
                             <constraint firstItem="1v6-oP-t73" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="zJ5-hu-XHq"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="clearView" destination="1v6-oP-t73" id="LSE-nC-NPj"/>
+                        <outlet property="clearView" destination="pt3-OP-BdV" id="R0g-Es-hSg"/>
                         <outlet property="colorsView" destination="lP0-y6-SPy" id="AYz-G0-e2m"/>
                         <outlet property="darwWidthView" destination="jSU-ag-sQm" id="Ryy-VN-MfZ"/>
                         <outlet property="toolsView" destination="Ghm-Ak-EdV" id="klw-da-HKp"/>
